--- a/react-admin-component/package.json
+++ b/react-admin-component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-counter-component",
+  "name": "react-admin-component",
   "private": true,
   "version": "0.0.0",
   "type": "module",
